Fix prettier thinking new lines are good things

--- a/src/pages/components/organization-management/organization-profile.mdx
+++ b/src/pages/components/organization-management/organization-profile.mdx
@@ -12,9 +12,7 @@ import { Images } from "@/components/Images";
   height={548}
   src="/images/ui-components/component-org_profile.svg"
 />
-The `
-<OrganizationProfile />
-` component is used to render a beautiful, full-featured organization management
+The `<OrganizationProfile />` component is used to render a beautiful, full-featured organization management
 UI that allows users to manage their organization profile and security settings.
 
 ## Usage
