Change to Read Session & User Data

--- a/src/pages/quickstarts/react.mdx
+++ b/src/pages/quickstarts/react.mdx
@@ -173,7 +173,7 @@ function App() {
 export default App;
 ```
 
-## Accessing Auth Data
+## Read Session & User Data
 
 Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your React application. We have included examples of how to use these helpers to get you started.
 
