--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -453,7 +453,7 @@ const styles = StyleSheet.create({
 });
 ```
 
-## Accessing Auth Data
+## Read Session & User Data
 
 Clerk provides a set of hooks and helpers that you can use to access the active session and user data in your Expo application. We have included examples of how to use these helpers to get you started.
 
