--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -5,7 +5,7 @@ import { Images } from "@/components/Images";
 
 # Use Clerk with Expo
 
-Learn how to use Clerk with Expo including protecting pages and retrieving user data.
+Learn how to use Clerk to quickly and easily add secure authentication and user management to your Expo application.
 
 ## Install @clerk/clerk-expo
 
