--- a/src/pages/quickstarts/react.mdx
+++ b/src/pages/quickstarts/react.mdx
@@ -5,7 +5,7 @@ import { Images } from "@/components/Images";
 
 # Use Clerk with React
 
-Learn how to use Clerk with React including protecting pages and retrieving user data.
+Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application.
 
 ## Install @clerk/clerk-react
 
