--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -4,11 +4,11 @@ import { YouTube } from "@/components/Youtube";
 
 # Use Clerk with Next.js
 
-Learn how to use Clerk with Next.js App Router including protecting pages and accessing authentication data.
+Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application. Clerk works seamlessly on both client side and server side components.
 
 ## Install @clerk/nextjs
 
-Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to our prebuilt components and hooks for React, as well as our helpers for Next.js API routes, server-side rendering, and edge middleware.
+Once you have a Next.js application ready, you need to install Clerk's Next.js SDK. This gives you access to prebuilt components and hooks, as well as our helpers for Next.js API routes, server-side rendering, and middleware.
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
@@ -30,7 +30,7 @@ Once you have a Next.js application ready, you need to install Clerk's Next.js S
 
 ## Set Environment Keys
 
-Below is an example of your .env.local file. To get the respective keys go to the API Keys page in the Clerk dashboard.
+Below is an example of an `.env.local` file. To get your keys go to the API Keys page on the [Clerk dashboard](https://dashboard.clerk.com).
 
 ```sh copy filename=".env.local"
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
