--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -32,7 +32,13 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
   </Tab>
 </Tabs>
 
+## Set Environment Keys
 
+Below is an example of your Publishable Key file. To get the respective keys go to the API Keys page in the [Clerk dashboard](https://dashboard.clerk.dev).
+
+```sh copy
+CLERK_PUBLISHABLE_KEY=pk_test_••••••••••••••••••••••••••••••••••
+```
 
 ## Configure `<ClerkProvider>`
 
@@ -43,9 +49,10 @@ import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider } from "@clerk/clerk-expo";
 
+const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••"
 export default function App() {
   return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+    <ClerkProvider publishableKey={CLERK_PUBLISHABLE_KEY}>
       <SafeAreaView style={styles.container}>
         <Text>Hello world!</Text>
       </SafeAreaView>
@@ -72,9 +79,10 @@ import React from "react";
 import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 
+const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••"
 export default function App() {
   return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+    <ClerkProvider publishableKey={CLERK_PUBLISHABLE_KEY}>
       <SafeAreaView style={styles.container}>
         <SignedIn>
           <Text>You are Signed in</Text>
@@ -268,9 +276,10 @@ import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 import SignInScreen from ".components/sign-in";
 
+const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••";
 export default function App() {
   return (
-    <ClerkProvider publishableKey="pk_test_••••••••••••••••••••••••••••••••••">
+    <ClerkProvider publishableKey={CLERK_PUBLISHABLE_KEY}>
       <SafeAreaView styles={styles.container}>
         <SignedIn>
           <Text>You are Signed in</Text>
@@ -410,6 +419,8 @@ import { SafeAreaView, Text, StyleSheet } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut } from "@clerk/clerk-expo";
 import * as SecureStore from "expo-secure-store";
 
+const CLERK_PUBLISHABLE_KEY = "pk_test_••••••••••••••••••••••••••••••••••";
+
 const tokenCache = {
   getToken(key: string) {
     try {
@@ -431,7 +442,7 @@ export default function App() {
   return (
     <ClerkProvider
       tokenCache={tokenCache}
-      publishableKey="pk_test_••••••••••••••••••••••••••••••••••"
+      publishableKey={CLERK_PUBLISHABLE_KEY}
     >
       <SafeAreaView styles={styles.container}>
         <SignedIn>
