--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -520,7 +520,7 @@ const styles = StyleSheet.create({
 
 ## Adding a token cache
 
-A token cache is important for persisting your JWT by default Clerk holds it in memory, however this shouldn't be used for Production applications. 
+A token cache is important for persisting your JWT. By default Clerk holds it in memory, however this method shouldn't be used for Production applications. 
 Expo provides a way to encrypt and securely store key–value pairs locally on the device via [`expo-secure-store`](https://docs.expo.dev/versions/v47.0.0/sdk/securestore/).  
 
 You can use it as your client JWT storage by setting the `tokenCache` prop in your `<ClerkProvider/>` as shown below.
@@ -605,7 +605,7 @@ To sign a user out you can use the `signOut` method from the `useAuth` hook. Thi
 
 ```tsx filename="app.tsx" copy
 import React from "react";
-import { SafeAreaView, Text, StyleSheet } from "react-native";
+import { SafeAreaView, Text, StyleSheet, View, Button } from "react-native";
 import { ClerkProvider, SignedIn, SignedOut,useAuth } from "@clerk/clerk-expo";
 import { SignInWithOAuth } from "./components/SignInWithOAuth";
 import * as SecureStore from "expo-secure-store";
