--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -683,9 +683,11 @@ Clerk provides a set of hooks and helpers that you can use to access the active 
 The `useAuth` hook is a convenient way to access the current auth state. This hook provides the minimal information needed for data-loading and helper methods to manage the current active session.
 
 
-```tsx copy filename="pages/example.tsx"
+```tsx copy filename="components/UseAuthExample.tsx"
 import { useAuth } from "@clerk/clerk-expo";
-export default function Example() {
+import { Text } from "react-native";
+
+export default function UseAuthExample() {
   const { isLoaded, userId, sessionId, getToken } = useAuth();
 
   // In case the user signs out while on the page.
@@ -694,9 +696,9 @@ export default function Example() {
   }
 
   return (
-    <div>
+    <Text>
       Hello, {userId} your current active session is {sessionId}
-    </div>
+    </Text>
   );
 }
 ```
@@ -705,20 +707,19 @@ export default function Example() {
 
 The `useUser` hook is a convenient way to access the current user data where you need it. This hook provides the user data and helper methods to manage the current active session.
 
-```tsx copy filename="pages/example.tsx"
+```tsx copy filename="components/UseUserExample.tsx"
 import { useUser } from "@clerk/clerk-expo";
+import { Text } from "react-native";
 
-export default function Example() {
+export default function UseUserExample() {
   const { isLoaded, isSignedIn, user } = useUser();
 
   if (!isLoaded || !isSignedIn) {
     return null;
   }
 
-  return <div>Hello, {user.firstName} welcome to Clerk</div>;
+  return <Text>Hello, {user.firstName} welcome to Clerk</Text>;
 }
-
-export default Example;
 ```
 
 ## Next Steps
