Adding apperance property and localization.

--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -25,7 +25,7 @@ Learn how to use Clerk to quickly and easily add secure authentication and user 
    ```
    </Tab>
   <Tab>
-  ``` bash filename="your-project" copy
+  ``` bash filename="terminal" copy
   pnpm create-expo-app [name] --template expo-template-blank-typescript@47
   ```
   </Tab>
