--- a/src/pages/quickstarts/nextjs/stable.mdx
+++ b/src/pages/quickstarts/nextjs/stable.mdx
@@ -100,8 +100,7 @@ To make sure you are using the embedded components you will need to update your 
 />
 
 <Callout type="info" emoji="ℹ️">
-  If you want to learn more about learn more about the prebuilt components check
-  out our [Clerk Components documentation](/components/ui-components/sign-in).
+  By default, the Clerk components inherit the font family. With create-next-app they don't apply a global font family. When you launch your application you may notice that the font family is different.
 </Callout>
 
 ## Add Middleware
@@ -358,5 +357,6 @@ export const getServerSideProps: GetServerSideProps = async (ctx) => {
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
+- [Customizing components](/components/customization/appearance)
 - [Server-side Helpers](/sdk/next/get-auth)
 - [Client side helpers](/sdk/shared/use-auth)
