--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -92,8 +92,7 @@ export default function Page() {
 ```
 
 <Callout type="info" emoji="ℹ️">
-  If you want to learn more about learn more about the prebuilt components check
-  out our [Clerk Components documentation](/components/ui-components/sign-in).
+  By default, the Clerk components inherit the font family. With create-next-app they don't apply a global font family. When you launch your application you may notice that the font family is different.
 </Callout>
 
 ## Add Middleware
@@ -318,5 +317,6 @@ export default function Page() {
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
+- [Customizing components](/components/customization/appearance)
 - [Server-side Helpers](/sdk/next/get-auth)
 - [Client side helpers](/sdk/shared/use-auth)
