--- a/src/pages/components/customization/appearance.mdx
+++ b/src/pages/components/customization/appearance.mdx
@@ -5,8 +5,8 @@ import { Tables } from "@/components/Table";
 # Appearance prop
 
 ---
-The appearance prop can be applied to `<ClerkProvider/>` to share styles across every component, or individually to any of the Clerk components.
 
+The appearance prop can be applied to `<ClerkProvider/>` to share styles across every component, or individually to any of the Clerk components.
 
 ## `@clerk/themes`
 
@@ -15,18 +15,18 @@ We offer a set of themes that can be used with the `appearance` prop. The themes
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
   ``` bash filename="your-project" copy
-    npm install @clerk/themes
+  npm install @clerk/themes
   ```
   </Tab>
   <Tab>
-   ``` bash filename="your-project" copy
-   yarn add @clerk/themes
-   ```
-   </Tab>
-  <Tab>
   ``` bash filename="your-project" copy
-  pnpm install @clerk/themes
+  yarn add @clerk/themes
   ```
+  </Tab>
+  <Tab>
+    ``` bash filename="your-project" copy
+     pnpm install @clerk/themes
+    ```
   </Tab>
 </Tabs>
 
@@ -51,9 +51,10 @@ function MyApp({ pageProps }: AppProps) {
 
 export default MyApp;
 ```
-## Layout 
 
-The layout key can be used to change the layout of the `<SignIn/>` and `<SignUp/>` components as well as important links to your support, terms and privacy pages. 
+## Layout
+
+The layout key can be used to change the layout of the `<SignIn/>` and `<SignUp/>` components as well as important links to your support, terms and privacy pages.
 
 #### Usage
 
@@ -86,6 +87,7 @@ function MyApp({ pageProps }: AppProps) {
 
 export default MyApp;
 ```
+
 #### Available options
 
 <Tables
@@ -94,35 +96,49 @@ export default MyApp;
     {
       cells: ["helpPageUrl", "string", "The URL to your help page"],
     },
-        {
+    {
       cells: ["logoImageUrl", "string", "The URL to your logo image"],
     },
     {
-      cells: ["logoPlacement", "string", "The placement of your logo. \n The options are: \n - `inside` \n - `outside`"],
+      cells: [
+        "logoPlacement",
+        "string",
+        "The placement of your logo. \n The options are: \n - `inside` \n - `outside`",
+      ],
     },
     {
-        cells: ["privacyPageUrl", "string", "The URL to your privacy page"],
+      cells: ["privacyPageUrl", "string", "The URL to your privacy page"],
     },
     {
-        cells: ["showOptionalFields", "boolean", "Whether to show optional fields on sign up."],
+      cells: [
+        "showOptionalFields",
+        "boolean",
+        "Whether to show optional fields on sign up.",
+      ],
     },
     {
-        cells: ["socialButtonsPlacement", "string", "The placement of your social buttons. \n The options are: \n -`bottom` \n - `top`"],
+      cells: [
+        "socialButtonsPlacement",
+        "string",
+        "The placement of your social buttons. \n The options are: \n -`bottom` \n - `top`",
+      ],
     },
     {
-        cells: ["socialButtonsVariant", "string", "The variant of your social buttons. \n The options are: \n - `blockButton` \n - `textButton` \n - `auto`"],
+      cells: [
+        "socialButtonsVariant",
+        "string",
+        "The variant of your social buttons. \n The options are: \n - `blockButton` \n - `textButton` \n - `auto`",
+      ],
     },
     {
-        cells: ["termsPageUrl", "string", "The URL to your terms page"],
-    }
-    
-  ]}/>
+      cells: ["termsPageUrl", "string", "The URL to your terms page"],
+    },
+  ]}
+/>
 
+## Variables
 
-
-## Variables 
-
-The variables property is used to adjust the general styles of the base theme, like colors, backgrounds, typography. 
+The variables property is used to adjust the general styles of the base theme, like colors, backgrounds, typography.
 
 #### Usage
 
@@ -153,33 +169,90 @@ export default MyApp;
 <Tables
   headings={["Name", "Description"]}
   rows={[
-    {cells: ["colorPrimary","The primary color used throughout the components"]},
-    {cells: ["colorDanger",  "The color used for error states"]},
-    {cells: ["colorSuccess", "The color used for success states"]},
-    {cells: ["colorWarning", "The color used for warning states"]},
-    {cells: ["colorAlphaShaded", "The color that will be used for all to generate the alpha shades the components use. /n This option applies to borders, backgrounds for hovered elements, hovered dropdown options"]},
-    {cells: ["colorTextOnPrimaryBackground", "The color used for text on the primary background"]},
-    {cells: ["colorTextSecondary", "The color used for secondary text"]},
-    {cells: ["colorBackground", "The background color for the card container"]},
-    {cells: ["colorInputText", "The color used for text in input fields"]},
-    {cells: ["colorInputBackground", "The background color used for input fields"]},
-    {cells: ["fontFamily", "The font family used throughout the components, by default we inherit the font family"]},
-    {cells: ["fontFamilyButtons", "The font family used for buttons, by default we inherit the font family"]},
-    {cells: ["fontSize", "The font size used throughout the components, by default this is set to 1rem"]},
-    {cells: ["fontSmoothing",  "The font smoothing used throughout the components, by default this is set to auto"]},
-    {cells: ["fontWeight", "The font weight used throughout the components, by default this is set to {normal: 400, medium: 500, bold: 600}"]},
-    {cells: ["borderRadius",  "The border radius used throughout the components, by default this is set to 0.375rem"]},
-    {cells: ["spacingUnit","The spacing unit used throughout the components, by default this is set to 1rem"]}
-  ]}/>
+    {
+      cells: [
+        "colorPrimary",
+        "The primary color used throughout the components",
+      ],
+    },
+    { cells: ["colorDanger", "The color used for error states"] },
+    { cells: ["colorSuccess", "The color used for success states"] },
+    { cells: ["colorWarning", "The color used for warning states"] },
+    {
+      cells: [
+        "colorAlphaShaded",
+        "The color that will be used for all to generate the alpha shades the components use. /n This option applies to borders, backgrounds for hovered elements, hovered dropdown options",
+      ],
+    },
+    {
+      cells: [
+        "colorTextOnPrimaryBackground",
+        "The color used for text on the primary background",
+      ],
+    },
+    { cells: ["colorTextSecondary", "The color used for secondary text"] },
+    {
+      cells: ["colorBackground", "The background color for the card container"],
+    },
+    { cells: ["colorInputText", "The color used for text in input fields"] },
+    {
+      cells: [
+        "colorInputBackground",
+        "The background color used for input fields",
+      ],
+    },
+    {
+      cells: [
+        "fontFamily",
+        "The font family used throughout the components, by default we inherit the font family",
+      ],
+    },
+    {
+      cells: [
+        "fontFamilyButtons",
+        "The font family used for buttons, by default we inherit the font family",
+      ],
+    },
+    {
+      cells: [
+        "fontSize",
+        "The font size used throughout the components, by default this is set to 1rem",
+      ],
+    },
+    {
+      cells: [
+        "fontSmoothing",
+        "The font smoothing used throughout the components, by default this is set to auto",
+      ],
+    },
+    {
+      cells: [
+        "fontWeight",
+        "The font weight used throughout the components, by default this is set to {normal: 400, medium: 500, bold: 600}",
+      ],
+    },
+    {
+      cells: [
+        "borderRadius",
+        "The border radius used throughout the components, by default this is set to 0.375rem",
+      ],
+    },
+    {
+      cells: [
+        "spacingUnit",
+        "The spacing unit used throughout the components, by default this is set to 1rem",
+      ],
+    },
+  ]}
+/>
 
-  ## Elements 
-   
-   The elements property is used for fine-grained theme overrides, and is useful when for styling specific HTML elements. You can find the element to target by inspecting the HTML and looking for the class name.
+## Elements
+
+The elements property is used for fine-grained theme overrides, and is useful when for styling specific HTML elements. You can find the element to target by inspecting the HTML and looking for the class name.
 
 An example would be: `cl-formButtonPrimary` which targets the primary buttons in a Clerk component.
 
 #### Usage
-
 
 ```tsx filename="app.tsx" copy
 import { ClerkProvider, SignIn } from '@clerk/nextjs';
@@ -211,7 +284,7 @@ Currently Clerk components can be used with the following styling methods:
 - CSS Modules
 - Tailwind CSS
 - Inline CSS Objects
-- Global CSS / CSS libraries 
+- Global CSS / CSS libraries
 
 ### CSS Modules
 
@@ -223,11 +296,12 @@ Simply create your Module file and add the CSS you want to apply.
   color: black;
 }
 ```
+
 Then you can apply this by importing the file and using the classes whenever required:
 
 ```tsx filename="app.tsx" copy
-import styles from '../styles/SignIn.module.css';
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
+import styles from "../styles/SignIn.module.css";
+import { ClerkProvider, SignIn } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
 function MyApp({ pageProps }: AppProps) {
@@ -236,12 +310,12 @@ function MyApp({ pageProps }: AppProps) {
       <SignIn
         appearance={{
           elements: {
-            formButtonPrimary: styles.primaryColor
-          }
+            formButtonPrimary: styles.primaryColor,
+          },
         }}
       />
     </ClerkProvider>
-  )
+  );
 }
 
 export default MyApp;
@@ -250,7 +324,7 @@ export default MyApp;
 ### Tailwind CSS
 
 ```tsx filename="app.tsx" copy
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
+import { ClerkProvider, SignIn } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
 function MyApp({ pageProps }: AppProps) {
@@ -259,12 +333,13 @@ function MyApp({ pageProps }: AppProps) {
       <SignIn
         appearance={{
           elements: {
-            formButtonPrimary: 'bg-slate-500 hover:bg-slate-400 text-sm normal-case'
-          }
+            formButtonPrimary:
+              "bg-slate-500 hover:bg-slate-400 text-sm normal-case",
+          },
         }}
       />
     </ClerkProvider>
-  )
+  );
 }
 
 export default MyApp;
@@ -273,7 +348,7 @@ export default MyApp;
 ### Inline CSS Objects
 
 ```tsx filename="app.tsx" copy
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
+import { ClerkProvider, SignIn } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
 function MyApp({ pageProps }: AppProps) {
@@ -282,19 +357,19 @@ function MyApp({ pageProps }: AppProps) {
       <SignIn
         appearance={{
           elements: {
-                formButtonPrimary: {
-                fontSize: 14,
-                textTransform: 'none',
-                backgroundColor: '#611BBD',
-                '&:hover, &:focus, &:active': {
-                backgroundColor: '#49247A'
-                    }
-                }
-            }
+            formButtonPrimary: {
+              fontSize: 14,
+              textTransform: "none",
+              backgroundColor: "#611BBD",
+              "&:hover, &:focus, &:active": {
+                backgroundColor: "#49247A",
+              },
+            },
+          },
         }}
       />
     </ClerkProvider>
-  )
+  );
 }
 
 export default MyApp;
@@ -324,9 +399,8 @@ Instead of using the Clerk-provided classes (the cl- prefixed ones), you can pas
 
 For example, you can apply Bootstrap button and text utility classes to the primary form button like so:
 
-
 ```tsx filename="app.tsx" copy
-import { ClerkProvider, SignIn } from '@clerk/nextjs';
+import { ClerkProvider, SignIn } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
 function MyApp({ pageProps }: AppProps) {
@@ -334,13 +408,13 @@ function MyApp({ pageProps }: AppProps) {
     <ClerkProvider {...pageProps}>
       <SignIn
         appearance={{
-            elements: {
-             formButtonPrimary: 'btn btn-info text-capitalize'
-            }
+          elements: {
+            formButtonPrimary: "btn btn-info text-capitalize",
+          },
         }}
       />
     </ClerkProvider>
-  )
+  );
 }
 
 export default MyApp;
