--- a/src/pages/components/customization/localization.mdx
+++ b/src/pages/components/customization/localization.mdx
@@ -20,25 +20,25 @@ The `@clerk/localizations` package contains predefined localizations for the Cle
 
 <Tabs items={["npm", "yarn", "pnpm"]}>
   <Tab>
-  ``` bash filename="your-project" copy
+    ``` bash filename="your-project" copy
     npm install @clerk/localizations
-  ```
+    ```
   </Tab>
   <Tab>
-   ``` bash filename="your-project" copy
-   yarn add @clerk/localizations
-   ```
-   </Tab>
+    ``` bash filename="your-project" copy
+    yarn add @clerk/localizations
+    ```
+  </Tab>
   <Tab>
-  ``` bash filename="your-project" copy
-  pnpm install @clerk/localizations
-  ```
+    ``` bash filename="your-project" copy
+    pnpm install @clerk/localizations
+    ```
   </Tab>
 </Tabs>
 
 ```tsx filename="_app.tsx" copy
 import { ClerkProvider } from "@clerk/nextjs";
-import { frFR } from '@clerk/localizations';
+import { frFR } from "@clerk/localizations";
 import type { AppProps } from "next/app";
 
 function MyApp({ Component, pageProps }: AppProps) {
@@ -63,8 +63,8 @@ import { ClerkProvider } from "@clerk/nextjs";
 import type { AppProps } from "next/app";
 
 const localization = {
-  socialButtonsBlockButton: 'Sign In with {{provider|titleize}}',
-}
+  socialButtonsBlockButton: "Sign In with {{provider|titleize}}",
+};
 
 function MyApp({ Component, pageProps }: AppProps) {
   return (
