Improve home page. Add Card

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,29 +1,110 @@
+import { Cards } from "@/components/Cards";
+
 # Getting Started
 
 The Clerk beta docs are a work in progress, you may find some rough edges or missing content. If you have any questions, please reach out to us on [Discord](https://discord.com/invite/b5rXHjAg7A).
 
 ## Quickstart Guides
 
-- #### [Next.js](/quickstarts/next/next)
-- #### [Next.js App Router](/quickstarts/next/next-beta)
-- #### [React](/quickstarts/react)
-- #### [Expo](/quickstarts/expo)
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards
+      title="Next.js Stable"
+      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js application."
+      link="/quickstarts/nextjs/stable"
+      cta="Get Started"
+    />
+    <Cards
+      title="Next.js App Router"
+      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your Next.js using RSC."
+      link="/quickstarts/nextjs/app-router"
+      cta="Get Started"
+    />
+    <Cards
+      title="React"
+      description="Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application."
+      link="/quickstarts/react"
+      cta="Get Started"
+    />
+    <Cards
+      title="Expo"
+      description="Learn how to use Clerk to add secure authentication and user management to your Expo application using custom flows."
+      link="/quickstarts/expo"
+      cta="Get Started"
+    />
+  </div>
+</div>
 
 ## Components
 
-- #### [Authentication](/components/authentication/sign-in)
-- #### [User Management](/components/user-management/signed-in)
-- #### [Organization Management](/components/organization-management/create-organization)
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards
+      title="Authentication"
+      description="Learn about the authentication components that Clerk provides and how to use them."
+      link="/components/authentication/sign-in"
+      cta="Learn More"
+    />
+    <Cards
+      title="User Management"
+      description="Learn about the user management components that Clerk provides and how to use them."
+      link="/components/user-management/signed-in"
+      cta="Learn More"
+    />
+    <Cards
+      title="Organization Management"
+      description="Learn about the organization management components that Clerk provides and how to use them."
+      link="/components/organization-management/create-organization"
+      cta="Learn More"
+    />
+    <Cards
+      title="Customization & Localization"
+      description="Learn how to customize and localize the Clerk components."
+      link="/components/customization/appearance"
+      cta="Learn More"
+    />
+  </div>
+</div>
 
 ## Hooks
 
-- #### [Authentication](/hooks/authentication/use-sign-in)
-- #### [User Management](/hooks/user-management/use-auth)
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards
+      title="User Management"
+      description="Learn about the user management hooks that Clerk provides and how to use them."
+      link="/hooks/user-management/use-user"
+      cta="Learn More"
+    />
+
+    <Cards
+      title="Authentication"
+      description="Learn about the authentication hooks that Clerk provides and how to use them"
+      link="/hooks/authentication/use-sign-in"
+      cta="Learn More"
+    />
+    </div>
+
+</div>
 
 ## SDKS
 
-- ### [Next.js](/sdk/next/with-clerk-middleware)
-- ### [Shared](/sdk/shared/use-user)
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards
+      title="Next.js"
+      description="Learn about the Next.js SDK that Clerk provides and it's unique features."
+      link="/sdk/next/get-auth"
+      cta="Learn More"
+    />
+    <Cards
+      title="Shared"
+      description="Learn about Clerk SDK methods that are shared across each framework."
+      link="/sdk/shared/use-auth"
+      cta="Learn More"
+    />
+  </div>
+</div>
 
 ## How to help?
 
