--- a/src/pages/quickstarts/expo.mdx
+++ b/src/pages/quickstarts/expo.mdx
@@ -2,6 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
+import {Cards} from "@/components/Cards";
 
 # Use Clerk with Expo
 
@@ -726,4 +727,13 @@ export default function UseUserExample() {
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
-- [Client side helpers](/sdk/shared/use-auth)
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards
+      title="Client Side Helpers"
+      description="Learn more about our client side helpers and how to use them."
+      link="/sdk/shared/use-auth"
+      cta="Learn More"
+    />
+   </div> 
+</div>
