--- a/src/pages/quickstarts/nextjs/app-router.mdx
+++ b/src/pages/quickstarts/nextjs/app-router.mdx
@@ -1,6 +1,7 @@
 import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
+import {Cards} from "@/components/Cards";
 
 # Use Clerk with Next.js
 
@@ -317,6 +318,25 @@ export default function Page() {
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
-- [Customizing components](/components/customization/appearance)
-- [Server-side Helpers](/sdk/next/get-auth)
-- [Client side helpers](/sdk/shared/use-auth)
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards
+      title="Customization & Localization"
+      description="Learn how to customize and localize the Clerk components."
+      link="/components/customization/appearance"
+      cta="Learn More"
+    />
+    <Cards
+      title="Server Side Helpers"
+      description="Learn more about our server side helpers and how to use them."
+      link="/sdk/next/get-auth"
+      cta="Learn More"
+    />
+    <Cards
+      title="Client Side Helpers"
+      description="Learn more about our client side helpers and how to use them."
+      link="/sdk/shared/use-auth"
+      cta="Learn More"
+    />
+   </div> 
+</div>
