--- a/src/pages/quickstarts/react.mdx
+++ b/src/pages/quickstarts/react.mdx
@@ -2,6 +2,7 @@ import { Tab, Tabs } from "nextra-theme-docs";
 import { Callout } from "nextra-theme-docs";
 import { YouTube } from "@/components/Youtube";
 import { Images } from "@/components/Images";
+import {Cards} from "@/components/Cards";
 
 # Use Clerk with React
 
@@ -222,5 +223,26 @@ export default function Example() {
 
 Now you have an application integrated with Clerk you will want to read the following documentation:
 
-- [Client side helpers](/sdk/shared/use-auth)
-- [UI components](/components/authentication/sign-in)
+<div className="container mx-auto my-4">
+  <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
+    <Cards
+      title="Customization & Localization"
+      description="Learn how to customize and localize the Clerk components."
+      link="/components/customization/appearance"
+      cta="Learn More"
+    />
+    <Cards
+      title="Authentication Components"
+      description="Learn more about all our authentication components."
+      link="/components/authentication/sign-in"
+      cta="Learn More"
+    />
+    <Cards
+      title="Client Side Helpers"
+      description="Learn more about our client side helpers and how to use them."
+      link="/sdk/shared/use-auth"
+      cta="Learn More"
+    />
+   </div> 
+</div>
+
